[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/land/monochrome_packed.png" type="Texture" id=1]
[ext_resource path="res://sprites/land/monochrome_tilemap_packed.png" type="Texture" id=2]
[ext_resource path="res://level tuto.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.7047, 7.80132 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 31.7953 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 72.5986, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 60.113, 8.08192 )

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 745, 747, 746 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.82652, 8.03055 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 13.2268, 7.93665 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 7.98051, 7.82941 )

[node name="level tuto" type="Node2D"]
z_index = 2
script = ExtResource( 3 )

[node name="wall" type="Node2D" parent="."]

[node name="wall" type="Sprite" parent="wall"]
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 196

[node name="wall22" type="Sprite" parent="wall"]
position = Vector2( -93.5444, -34.7451 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 72

[node name="wall23" type="Sprite" parent="wall"]
position = Vector2( -32.1455, -38.1485 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 754

[node name="wall2" type="Sprite" parent="wall"]
position = Vector2( -16, 0 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 196

[node name="wall4" type="Sprite" parent="wall"]
position = Vector2( -64, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 196

[node name="wall5" type="Sprite" parent="wall"]
position = Vector2( -80, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 196

[node name="wall3" type="Sprite" parent="wall"]
position = Vector2( -48, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 196

[node name="wall6" type="Sprite" parent="wall"]
position = Vector2( -111.986, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 196

[node name="wall7" type="Sprite" parent="wall"]
position = Vector2( -127.986, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 196

[node name="wall8" type="Sprite" parent="wall"]
position = Vector2( -95.9863, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 196

[node name="wall9" type="Sprite" parent="wall"]
position = Vector2( -144, -32 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 217

[node name="wall10" type="Sprite" parent="wall"]
position = Vector2( -144, -47.7668 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 217

[node name="wall11" type="Sprite" parent="wall"]
position = Vector2( -144, -63.6517 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 217

[node name="wall12" type="Sprite" parent="wall"]
position = Vector2( -144, -79.419 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 217

[node name="wall13" type="Sprite" parent="wall"]
position = Vector2( -128, -95.4209 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 236

[node name="wall14" type="Sprite" parent="wall"]
position = Vector2( -112.075, -95.421 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 236

[node name="wall15" type="Sprite" parent="wall"]
position = Vector2( -96.075, -95.4208 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 236

[node name="wall16" type="Sprite" parent="wall"]
position = Vector2( -80.15, -95.4209 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 236

[node name="wall17" type="Sprite" parent="wall"]
position = Vector2( -64.15, -95.4208 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 236

[node name="wall18" type="Sprite" parent="wall"]
position = Vector2( -48.225, -95.4208 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 236

[node name="wall19" type="Sprite" parent="wall"]
position = Vector2( -32.225, -95.4207 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 236

[node name="wall20" type="Sprite" parent="wall"]
position = Vector2( -16.3, -95.4207 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 236

[node name="wall21" type="Sprite" parent="wall"]
position = Vector2( -0.472469, -95.4744 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 236

[node name="corner" type="Sprite" parent="wall"]
position = Vector2( -32, -16 )
texture = ExtResource( 2 )
vframes = 20
hframes = 20
frame = 197

[node name="KinematicBody2D" type="KinematicBody2D" parent="wall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall/KinematicBody2D"]
position = Vector2( -19.0818, -0.726059 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="wall/KinematicBody2D"]
position = Vector2( -145.029, -55.7324 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="wall/KinematicBody2D"]
position = Vector2( -64.5431, -98.6197 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wall/KinematicBody2D"]
position = Vector2( -83.239, -15.8793 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="wall"]

[node name="button" type="Sprite" parent="."]
position = Vector2( -113.954, -35.4952 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 745

[node name="AnimationPlayer" type="AnimationPlayer" parent="button"]
"anims/button press" = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="button"]
position = Vector2( 0.166855, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="button/Area2D"]
position = Vector2( -0.125, 0.125 )
shape = SubResource( 6 )

[node name="newlevel" type="Sprite" parent="."]
position = Vector2( 16.379, -95.439 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 708

[node name="hitbox" type="KinematicBody2D" parent="newlevel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="newlevel/hitbox"]
shape = SubResource( 7 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 14.3155, -502.076 )

[node name="read" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="read"]
position = Vector2( -32.0025, -38.2461 )
shape = SubResource( 8 )

[node name="VisibilityEnabler2D2" type="VisibilityEnabler2D" parent="."]
position = Vector2( -3.77551, -112.793 )
[connection signal="body_entered" from="button/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="body_entered" from="read" to="." method="_on_read_body_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D2" to="." method="_on_VisibilityEnabler2D2_screen_exited"]
